fix: grid style and gap

--- a/styles.css
+++ b/styles.css
@@ -412,7 +412,7 @@ ul.search-results > li > a > p {
 /* BookList Styles */
 ul.book-list > li > *:first-child {
   display: grid;
-  grid-template-columns: 1fr 5fr;
+  grid-template-columns: minmax(50px, 120px) auto;
   gap: 0px 0px;
   grid-template-areas:
     "thumbnail ."
@@ -424,6 +424,7 @@ ul.book-list > li > *:first-child {
     "thumbnail .";
   border-bottom: 1px solid rgba(34,36,38,.15);
   padding: 1em;
+  column-gap: 1em;
 }
 ul.book-list > li:last-child > *:first-child {
   border-bottom: none;
